# qaguru_19_python

./: pyproject.toml
browserstack_lesson/: pyproject.toml  requirements.txt
browserstack_lesson/browserstack_lesson/tests/: test_browserstack.py
browserstack_lesson/tests/: test_browserstack.py
tests/: conftest.py  test_browserstack.py
util/: attachment.py
